add example list items

--- a/todo.html
+++ b/todo.html
@@ -21,6 +21,14 @@
             Add Task
         </button>
     </form>
+    <ul>
+        <li>
+            <label>
+                <input type="checkbox">
+                Build Website
+            </label>
+        </li>
+    </ul>
     <script src="js/script.js"></script>
 </body>
 
