--- a/todo.html
+++ b/todo.html
@@ -28,6 +28,12 @@
                 Build Website
             </label>
         </li>
+        <li>
+            <label>
+                <input type="checkbox">
+                Do something else
+            </label>
+        </li>
     </ul>
     <script src="js/script.js"></script>
 </body>
