--- a/todo.html
+++ b/todo.html
@@ -23,7 +23,7 @@
     </form>
     <ul>
         <li>
-            <label>
+            <label class="task">
                 <input type="checkbox">
                 Build Website
             </label>
