--- a/todo.html
+++ b/todo.html
@@ -15,15 +15,15 @@
     <form>
         <label>
             Task Name:
-            <input type = "text" placeholder="Do Assignment">
+            <input  id= "task-input"type = "text" placeholder="Do Assignment">
         </label>
-        <button type="button">
+        <button id="add-task" type="button">
             Add Task
         </button>
     </form>
     <ul>
         <li>
-            <label class="task">
+            <label>
                 <input type="checkbox">
                 Build Website
             </label>
