--- a/index.html
+++ b/index.html
@@ -21,20 +21,16 @@
             Add Task
         </button>
     </form>
-    <ul>
-        <li>
-            <label>
-                <input type="checkbox">
-                Build Website
-            </label>
-        </li>
-        <li>
-            <label>
-                <input type="checkbox">
-                Do something else
-            </label>
-        </li>
     </ul>
+    <script id="list-item-template"type=""text/template></script>
+    <ul id="todo-list">
+        <li>
+            <label>
+                <input type="checkbox">
+                <!--task_name-->
+            </label>
+        </li>
+</script>
     <script src="js/script.js"></script>
 </body>
 
