--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             Add Task
         </button>
     </form>
-    </ul>
-    <script id="list-item-template"type=""text/template></script>
     <ul id="todo-list">
+
+    </ul>
+
+    <script id="list-item-template"type="text/template"> 
         <li>
             <label>
                 <input type="checkbox">
