added event listener

--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
             Add Task
         </button>
     </form>
+   
     <ul id="todo-list">
-
     </ul>
 
-    <script id="list-item-template"type="text/template"> 
+<script id="list-item-template" type="text/template"> 
         <li>
             <label>
-                <input type="checkbox">
+                <input class="checlbox" type="checkbox">
                 <!--task_name-->
             </label>
         </li>
 </script>
+
     <script src="js/script.js"></script>
 </body>
 
