--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <script id="list-item-template" type="text/template"> 
         <li>
             <label>
-                <input class="checlbox" type="checkbox">
+                <input class="checkbox" type="checkbox">
                 <!--task_name-->
             </label>
         </li>
