--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
 
 <script id="list-item-template" type="text/template"> 
-        <li>
+        <li class="task">
             <label>
                 <input class="checkbox" type="checkbox">
                 <!--task_name-->
